--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.yaml.j2
@@ -13,7 +13,7 @@ variable "vpc_id" {
     description = "ID of VPC"
 }
 {%- endif %}
-{%- if IS_EFS | lower == 'true'%}
+{%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true')%}
 
 variable "vpc_name" {
     type        = string
