--- a/tekton/src/tasks/gitops/gitops-iac-provision-msk.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-provision-msk.yml.j2
@@ -28,28 +28,18 @@ spec:
       type: string
 
    # iac-msk iot params
-    - name: msk_iot_kafka_version
+    - name: msk_kafka_version
       type: string
-    - name: msk_iot_instance_type
+    - name: msk_instance_type
       type: string
-    - name: msk_iot_cluster_username
+    - name: msk_cluster_username
       type: string
-    - name: msk_iot_broker_volume_size
+    - name: msk_broker_volume_size
       type: string
-    - name: msk_iot_number_of_broker_nodes
+    - name: msk_number_of_broker_nodes
       type: string
-   # iac-msk monitor params
-    - name: msk_monitor_kafka_version
+    - name: msk_cluster_prefix
       type: string
-    - name: msk_monitor_instance_type
-      type: string
-    - name: msk_monitor_cluster_username
-      type: string
-    - name: msk_monitor_broker_volume_size
-      type: string
-    - name: msk_monitor_number_of_broker_nodes
-      type: string
-
 
   stepTemplate:
     env:
@@ -74,29 +64,20 @@ spec:
       - name: MSK_SOURCE
         value: $(params.msk_source)
 
-      # iac-msk iot params
-      - name: MSK_IOT_KAFKA_VERSION
-        value: $(params.msk_iot_kafka_version)
-      - name: MSK_IOT_INSTANCE_TYPE
-        value: $(params.msk_iot_instance_type)
-      - name: MSK_IOT_CLUSTER_USERNAME
-        value: $(params.msk_iot_cluster_username)
-      - name: MSK_IOT_BROKER_VOLUME_SIZE
-        value: $(params.msk_iot_broker_volume_size)
-      - name: MSK_IOT_NUMBER_OF_BROKER_NODES
-        value: $(params.msk_iot_number_of_broker_nodes)
+      # iac-msk params
+      - name: MSK_KAFKA_VERSION
+        value: $(params.msk_kafka_version)
+      - name: MSK_INSTANCE_TYPE
+        value: $(params.msk_instance_type)
+      - name: MSK_CLUSTER_USERNAME
+        value: $(params.msk_cluster_username)
+      - name: MSK_BROKER_VOLUME_SIZE
+        value: $(params.msk_broker_volume_size)
+      - name: MSK_NUMBER_OF_BROKER_NODES
+        value: $(params.msk_number_of_broker_nodes)
+      - name: MSK_CLUSTER_PREFIX
+        value: $(params.msk_cluster_prefix)
 
-      # iac-msk monitor params
-      - name: MSK_MONITOR_KAFKA_VERSION
-        value: $(params.msk_monitor_kafka_version)
-      - name: MSK_MONITOR_INSTANCE_TYPE
-        value: $(params.msk_monitor_instance_type)
-      - name: MSK_MONITOR_CLUSTER_USERNAME
-        value: $(params.msk_monitor_cluster_username)
-      - name: MSK_MONITOR_BROKER_VOLUME_SIZE
-        value: $(params.msk_monitor_broker_volume_size)
-      - name: MSK_MONITOR_NUMBER_OF_BROKER_NODES
-        value: $(params.msk_monitor_number_of_broker_nodes)
     envFrom:
       - configMapRef:
           name: environment-properties
@@ -115,16 +96,12 @@ spec:
           CMD="mas gitops-iac-provision-msk -a $ACCOUNT -c $CLUSTER_NAME -m $MAS_INSTANCE_ID --dir /workspace/gitops-iac --github-push --github-host $GITHUB_HOST --github-org $GITHUB_ORG --github-repo $GITHUB_REPO --git-branch $GIT_BRANCH --region-name $REGION_NAME"
 
           [ -n "$MSK_SOURCE" ] && CMD="$CMD --msk_source $MSK_SOURCE"
-          [ -n "$MSK_IOT_KAFKA_VERSION" ] && CMD="$CMD --msk_iot_kafka_version $MSK_IOT_KAFKA_VERSION"
-          [ -n "$MSK_IOT_INSTANCE_TYPE" ] && CMD="$CMD --msk_iot_instance_type $MSK_IOT_INSTANCE_TYPE"
-          [ -n "$MSK_IOT_CLUSTER_USERNAME" ] && CMD="$CMD --msk_iot_cluster_username $MSK_IOT_CLUSTER_USERNAME"
-          [ -n "$MSK_IOT_BROKER_VOLUME_SIZE" ] && CMD="$CMD --msk_iot_broker_volume_size $MSK_IOT_BROKER_VOLUME_SIZE"
-          [ -n "$MSK_IOT_NUMBER_OF_BROKER_NODES" ] && CMD="$CMD --msk_iot_number_of_broker_nodes $MSK_IOT_NUMBER_OF_BROKER_NODES"
-          [ -n "$MSK_MONITOR_KAFKA_VERSION" ] && CMD="$CMD --msk_monitor_kafka_version $MSK_MONITOR_KAFKA_VERSION"
-          [ -n "$MSK_MONITOR_INSTANCE_TYPE" ] && CMD="$CMD --msk_monitor_instance_type $MSK_MONITOR_INSTANCE_TYPE"
-          [ -n "$MSK_MONITOR_CLUSTER_USERNAME" ] && CMD="$CMD --msk_monitor_cluster_username $MSK_MONITOR_CLUSTER_USERNAME"
-          [ -n "$MSK_MONITOR_BROKER_VOLUME_SIZE" ] && CMD="$CMD --msk_monitor_broker_volume_size $MSK_MONITOR_BROKER_VOLUME_SIZE"
-          [ -n "$MSK_MONITOR_NUMBER_OF_BROKER_NODES" ] && CMD="$CMD --msk_monitor_number_of_broker_nodes $MSK_MONITOR_NUMBER_OF_BROKER_NODES"
+          [ -n "$MSK_KAFKA_VERSION" ] && CMD="$CMD --msk_kafka_version $MSK_KAFKA_VERSION"
+          [ -n "$MSK_INSTANCE_TYPE" ] && CMD="$CMD --msk_instance_type $MSK_INSTANCE_TYPE"
+          [ -n "$MSK_CLUSTER_USERNAME" ] && CMD="$CMD --msk_cluster_username $MSK_CLUSTER_USERNAME"
+          [ -n "$MSK_BROKER_VOLUME_SIZE" ] && CMD="$CMD --msk_broker_volume_size $MSK_BROKER_VOLUME_SIZE"
+          [ -n "$MSK_NUMBER_OF_BROKER_NODES" ] && CMD="$CMD --msk_number_of_broker_nodes $MSK_NUMBER_OF_BROKER_NODES"
+          [ -n "$MSK_CLUSTER_PREFIX" ] && CMD="$CMD --msk_cluster_prefix $MSK_CLUSTER_PREFIX"
 
           echo "Executing: $CMD"
           eval $CMD
