main file change

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
@@ -209,7 +209,7 @@ locals {
   #----MSK config related params starts----
   multiple-msk = {
     msk = {
-      name        = join("-", [var.cluster_name, var.instance_name, ""])
+      name        = join("-", [var.cluster_name, var.instance_name])
       sre_prefix  = var.name_prefix
       secret_name = join("/", ["massaas", var.vpc_name, "{{MSK_CLUSTER_PREFIX}}", var.cluster_name, var.instance_name])
       broker_volume_size = {{MSK_BROKER_VOLUME_SIZE}}
