--- a/tekton/src/pipelines/mas-fvt-finally.yml.j2
+++ b/tekton/src/pipelines/mas-fvt-finally.yml.j2
@@ -98,24 +98,9 @@ spec:
         - input: $(params.finalize)
           operator: in
           values: ["true", "True"]
-
-    # Delete the named cluster
+    
+    # Record pipeline finish time
     # -------------------------------------------------------------------------
-    - name: deprovision-cluster
-      timeout: "0"
-      taskRef:
-        kind: Task
-        name: mas-fvt-deprovision-ocp
-      when:
-        - input: $(params.deprovision)
-          operator: in
-          values: ["true", "True"]
-      runAfter:
-        - finalize
-
-  # Finally
-  # ---------------------------------------------------------------------------
-  finally:
     - name: pipeline-finish
       timeout: "0"
       taskRef:
@@ -134,6 +119,22 @@ spec:
           value: $(context.pipelineRun.name)
         - name: pipelinerun_namespace
           value: $(context.pipelineRun.namespace)
+      runAfter:
+        - pipeline-finish
+
+    # Delete the named cluster
+    # -------------------------------------------------------------------------
+    - name: deprovision-cluster
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-fvt-deprovision-ocp
+      when:
+        - input: $(params.deprovision)
+          operator: in
+          values: ["true", "True"]
+      runAfter:
+        - pipeline-finish
 
   workspaces:
     # Shared storage to hold mustgather output for tasks
