--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
@@ -6,6 +6,13 @@ vpc_id               = "{{ VPC_ID_VALUE}}"
 #----Common params ends----
 {%- endif %}
 
+{%- if (IS_MSK | lower == 'true') %}
+
+#----MSK related params starts----
+cluster_prefix             = "{{MSK_CLUSTER_PREFIX}}"
+#----MSK related params ends----
+{%- endif %}
+
 
 {%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') %}
 
