[patch] add collaborate to mobile pipeline

--- a/tekton/src/pipelines/taskdefs/fvt-mobile/pytest/phase3-apps.yml.j2
+++ b/tekton/src/pipelines/taskdefs/fvt-mobile/pytest/phase3-apps.yml.j2
@@ -8,6 +8,7 @@
     - mobile-pytest-assetmanager
     - mobile-pytest-tech
     - mobile-pytest-supervisor
+    - mobile-pytest-collaborate
 
 - name: mobile-pytest-civil-defects
   {{ lookup('template', 'taskdefs/fvt-mobile/common/taskref-pytest.yml.j2') | indent(2) }}
@@ -19,3 +20,4 @@
     - mobile-pytest-assetmanager
     - mobile-pytest-tech
     - mobile-pytest-supervisor
+    - mobile-pytest-collaborate
