--- a/tekton/src/pipelines/taskdefs/fvt-mobile/pytest/phase2-apps.yml.j2
+++ b/tekton/src/pipelines/taskdefs/fvt-mobile/pytest/phase2-apps.yml.j2
@@ -32,3 +32,14 @@
     - mobile-pytest-requests
     - mobile-pytest-asset-image
     - mobile-pytest-download
+
+- name: mobile-pytest-collaborate
+  {{ lookup('template', 'taskdefs/fvt-mobile/common/taskref-pytest.yml.j2') | indent(2) }}
+  params:
+    {{ lookup('template', 'taskdefs/fvt-mobile/common/params-pytest.yml.j2') | indent(4) }}
+    - name: fvt_test_suite
+      value: mobile-api-collaborate
+  runAfter:
+    - mobile-pytest-requests
+    - mobile-pytest-asset-image
+    - mobile-pytest-download
