--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
@@ -26,7 +26,7 @@ data "aws_subnets" "internal_subnets" {
 locals {
 {%- if IS_S3 | lower == 'true' %}
 {%- if S3_MANAGE | lower == 'true'  %}
-  #----Manage related params for S3 starts----
+  #Manage related params for S3 starts
   iam_user_arns_manage = {
     custfiles = "${var.iam_user_arn_prefix_manage}-custfiles-${var.access_level_rw}"
     doclinks  = "${var.iam_user_arn_prefix_manage}-doclinks-${var.access_level_rw}"
@@ -77,24 +77,24 @@ locals {
     for key, value in local.s3_iam_users_list_manage :
     key => lookup(local.bucket_user_names_manage, key, null)
   }
-  #----Manage related params for S3 ends----
+  #Manage related params for S3 ends
 {%- endif %}
 
-  #----Common S3 params starts----
+  #Common S3 params starts
   s3_actions = {
     ro = ["s3:GetObject", "s3:ListBucket"]
     rw = ["s3:GetObject", "s3:PutObject", "s3:DeleteObject", "s3:ListBucket"]
   }
 
   location = var.location
-  #----Common S3 params ends----
+  #Common S3 params ends
 {%- endif %}
   cluster = {
   {%- if IS_S3 | lower == 'true' %}
     instance = {
       name = var.instance_name
       {%- if S3_MANAGE | lower == 'true'  %}
-    #----Manage specific S3 buckets starts----
+    #Manage specific S3 buckets starts
       manage_s3buckets = {
         doclinks = {
           name_prefix          = var.name_prefix
@@ -135,27 +135,27 @@ locals {
           expiration           = null
         }
       }
-    #----Manage specific S3 buckets ends----
+    #Manage specific S3 buckets ends
     {%- endif %}
     }
     name = var.cluster_name
     {%- endif %}
   {%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') %}
-    #----EFS/MSK related params starts----
+    #EFS/MSK related params starts
     "external_subnet_ids" : data.aws_subnets.external_subnets.ids
     "internal_subnet_ids" : data.aws_subnets.internal_subnets.ids
-    #----EFS/MSK related params ends----
+    #EFS/MSK related params ends
   {%- endif %}
   {%- if IS_MSK | lower == 'true' %}
-    #----MSK related params starts----
+    #MSK related params starts
     "security_groups" : ["{{ SECURITY_GROUPS_VALUE }}"]
-    #----MSK related params ends----
+    #MSK related params ends
   {%- endif %}
   }
 
 
  {%- if IS_EFS | lower == 'true' %}
-  #----EFS config related params starts----
+  #EFS config related params starts
   multiple-efs = {
 {%- if EFS_MANAGE == "true" %}
     manage-db2 = {
@@ -202,11 +202,11 @@ locals {
     }
 {%- endif %}
   }
-  #----EFS config related params ends----
+  #EFS config related params ends
 {%- endif %}
 
  {%- if IS_MSK | lower == 'true' %}
-  #----MSK config related params starts----
+  #MSK config related params starts
   multiple-msk = {
     msk = {
       name        = join("-", [var.cluster_name, var.instance_name])
@@ -219,6 +219,6 @@ locals {
       kafka_version = "{{MSK_KAFKA_VERSION}}"
     }
   }
-  #----MSK config related params ends----
+  #MSK config related params ends
 {%- endif %}
 }
