[patch] Update ArcGIS Tekton dependency to support both Manage and Facilities - MASCORE-10768
- Add mas_app_channel_facilities parameter to arcgis.yml.j2
- Update when conditions to trigger ArcGIS installation when either Manage or Facilities is configured

--- a/tekton/src/pipelines/taskdefs/dependencies/arcgis.yml.j2
+++ b/tekton/src/pipelines/taskdefs/dependencies/arcgis.yml.j2
@@ -15,6 +15,8 @@
       value: $(params.artifactory_token)
     - name: mas_app_channel
       value: "$(params.mas_app_channel_manage)"
+    - name: mas_app_channel_facilities
+      value: "$(params.mas_app_channel_facilities)"
     - name: ibm_entitlement_key
       value: $(params.ibm_entitlement_key)
     - name: custom_labels
@@ -32,4 +34,7 @@
       values: ["true", "True"]
     - input: "$(params.mas_arcgis_channel)"
       operator: notin
-      values: [""]  
+      values: [""]
+    - input: "$(params.mas_app_channel_manage)$(params.mas_app_channel_facilities)"
+      operator: notin
+      values: [""]
