--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/ibm-dro.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/ibm-dro.yaml.j2
@@ -7,6 +7,10 @@ ibm_dro:
     dro_cmm_setup: {{ DRO_CMM_SETUP }}
     dro_install_plan: {{ DRO_INSTALL_PLAN }}
     imo_install_plan: {{ IMO_INSTALL_PLAN }}
+{% if DRO_PUBLIC_DOMAIN is defined and DRO_PUBLIC_DOMAIN %}
+    tls_certificate: "<path:{{ SECRETS_PATH }}:{{ SECRET_KET_DRO_TLS_CERT }} | base64decode >"
+    tls_key: "<path:{{ SECRETS_PATH }}:{{ SECRET_KET_DRO_TLS_KEY }} | base64decode >"
+{% endif %}
 {% if DRO_CMM_SETUP is defined and DRO_CMM_SETUP %}
     dro_cmm:
         auth_apikey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_DRO_CMM_AUTH_APIKEY }}>"
