MSK cluster name and secret name corrected

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
@@ -10,6 +10,7 @@ vpc_id               = "{{ VPC_ID_VALUE}}"
 
 #MSK related params starts
 cluster_prefix             = "{{MSK_CLUSTER_PREFIX}}"
+environment                = "{{ENVIRONMENT_VALUE}}"
 #MSK related params ends
 {%- endif %}
 
