--- a/tekton/src/params/install.yml.j2
+++ b/tekton/src/params/install.yml.j2
@@ -662,13 +662,9 @@
 
 # MAS Application Configuration - IBM Maximo Location Services for ESRI
 # -----------------------------------------------------------------------------
-- name: install_arcgis
-  type: string
-  description: Flag to control whether to install IBM Maximo Location Services for ESRI
-  default: ""
 - name: mas_arcgis_channel
   type: string
-  description: Default channel for IBM Maximo Location Services for ESRI
+  description: Subscription channel for IBM Maximo Location Services for ESRI. Setting this will trigger ArcGIS installation.
   default: "" # default is handled by ansible-devops
 
 # MAS Application Configuration - Health Application
