--- a/tekton/src/tasks/gitops/gitops-suite.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-suite.yml.j2
@@ -142,6 +142,9 @@ spec:
     - name: extensions
       type: string
       default: "false"
+    - name: application_configuration
+      type: string
+      default: "true"
     - name: sls_service
       type: string
       default: ""
@@ -256,6 +259,8 @@ spec:
         value: $(params.is_non_shared_cluster)
       - name: EXTENSIONS
         value: $(params.extensions)
+      - name: APPLICATION_CONFIGURATION
+        value: $(params.application_configuration)
       - name: STANDALONE_SLS_SERVICE
         value: $(params.sls_service)
 
