--- a/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
@@ -209,42 +209,10 @@ spec:
           git config --global user.email "you@example.com"
           git config --global user.password $GITHUB_PAT
 
-          CMD="mas gitops-iac-generate-common-files -a $ACCOUNT -c $CLUSTER_NAME -m $MAS_INSTANCE_ID --dir /workspace/gitops-iac --github-push --github-host $GITHUB_HOST --github-org $GITHUB_ORG --github-repo $GITHUB_REPO --git-branch $GIT_BRANCH --region-name $REGION_NAME"
-
-          [ -n "$CLUSTER_URL" ] && CMD="$CMD --cluster-url $CLUSTER_URL"
-          # IS_EFS and IS_S3 are required, default to false if not set
-          CMD="$CMD --is_efs ${IS_EFS:-false}"
-          CMD="$CMD --is_s3 ${IS_S3:-false}"
-          CMD="$CMD --is_msk ${IS_MSK:-false}"
-          [ -n "$EFS_MANAGE_DB2_PERFORMANCE_MODE" ] && CMD="$CMD --efs_manage_db2_performance_mode $EFS_MANAGE_DB2_PERFORMANCE_MODE"
-          [ -n "$EFS_MANAGE_DB2_MOUNT_COUNT" ] && CMD="$CMD --efs_manage_db2_mount_count $EFS_MANAGE_DB2_MOUNT_COUNT"
-          [ -n "$EFS_MANAGE_DB2_THROUGHPUT_MODE" ] && CMD="$CMD --efs_manage_db2_throughput_mode $EFS_MANAGE_DB2_THROUGHPUT_MODE"
-          [ -n "$EFS_MANAGE_MAIN_PERFORMANCE_MODE" ] && CMD="$CMD --efs_manage_main_performance_mode $EFS_MANAGE_MAIN_PERFORMANCE_MODE"
-          [ -n "$EFS_MANAGE_MAIN_MOUNT_COUNT" ] && CMD="$CMD --efs_manage_main_mount_count $EFS_MANAGE_MAIN_MOUNT_COUNT"
-          [ -n "$EFS_MANAGE_MAIN_THROUGHPUT_MODE" ] && CMD="$CMD --efs_manage_main_throughput_mode $EFS_MANAGE_MAIN_THROUGHPUT_MODE"
-          [ -n "$EFS_IOT_DB2_PERFORMANCE_MODE" ] && CMD="$CMD --efs_iot_db2_performance_mode $EFS_IOT_DB2_PERFORMANCE_MODE"
-          [ -n "$EFS_IOT_DB2_MOUNT_COUNT" ] && CMD="$CMD --efs_iot_db2_mount_count $EFS_IOT_DB2_MOUNT_COUNT"
-          [ -n "$EFS_IOT_DB2_THROUGHPUT_MODE" ] && CMD="$CMD --efs_iot_db2_throughput_mode $EFS_IOT_DB2_THROUGHPUT_MODE"
-          [ -n "$EFS_FACILITIES_DB2_PERFORMANCE_MODE" ] && CMD="$CMD --efs_facilities_db2_performance_mode $EFS_FACILITIES_DB2_PERFORMANCE_MODE"
-          [ -n "$EFS_FACILITIES_DB2_MOUNT_COUNT" ] && CMD="$CMD --efs_facilities_db2_mount_count $EFS_FACILITIES_DB2_MOUNT_COUNT"
-          [ -n "$EFS_FACILITIES_DB2_THROUGHPUT_MODE" ] && CMD="$CMD --efs_facilities_db2_throughput_mode $EFS_FACILITIES_DB2_THROUGHPUT_MODE"
-          [ -n "$EFS_FACILITIES_MAIN_PERFORMANCE_MODE" ] && CMD="$CMD --efs_facilities_main_performance_mode $EFS_FACILITIES_MAIN_PERFORMANCE_MODE"
-          [ -n "$EFS_FACILITIES_MAIN_MOUNT_COUNT" ] && CMD="$CMD --efs_facilities_main_mount_count $EFS_FACILITIES_MAIN_MOUNT_COUNT"
-          [ -n "$EFS_FACILITIES_MAIN_THROUGHPUT_MODE" ] && CMD="$CMD --efs_facilities_main_throughput_mode $EFS_FACILITIES_MAIN_THROUGHPUT_MODE"
-          [ -n "$EFS_VISUALINSPECTION_MAIN_PERFORMANCE_MODE" ] && CMD="$CMD --efs_visualinspection_main_performance_mode $EFS_VISUALINSPECTION_MAIN_PERFORMANCE_MODE"
-          [ -n "$EFS_VISUALINSPECTION_MAIN_MOUNT_COUNT" ] && CMD="$CMD --efs_visualinspection_main_mount_count $EFS_VISUALINSPECTION_MAIN_MOUNT_COUNT"
-          [ -n "$EFS_VISUALINSPECTION_MAIN_THROUGHPUT_MODE" ] && CMD="$CMD --efs_visualinspection_main_throughput_mode $EFS_VISUALINSPECTION_MAIN_THROUGHPUT_MODE"
-          [ -n "$S3_MANAGE" ] && CMD="$CMD --s3_manage $S3_MANAGE"
-          [ -n "$S3_MVI" ] && CMD="$CMD --s3_mvi $S3_MVI"
-          [ -n "$MSK_KAFKA_VERSION" ] && CMD="$CMD --msk_kafka_version $MSK_KAFKA_VERSION"
-          [ -n "$MSK_INSTANCE_TYPE" ] && CMD="$CMD --msk_instance_type $MSK_INSTANCE_TYPE"
-          [ -n "$MSK_CLUSTER_USERNAME" ] && CMD="$CMD --msk_cluster_username $MSK_CLUSTER_USERNAME"
-          [ -n "$MSK_BROKER_VOLUME_SIZE" ] && CMD="$CMD --msk_broker_volume_size $MSK_BROKER_VOLUME_SIZE"
-          [ -n "$MSK_NUMBER_OF_BROKER_NODES" ] && CMD="$CMD --msk_number_of_broker_nodes $MSK_NUMBER_OF_BROKER_NODES"
-          [ -n "$MSK_CLUSTER_PREFIX" ] && CMD="$CMD --msk_cluster_prefix $MSK_CLUSTER_PREFIX"
-
-          echo "Executing: $CMD"
-          eval $CMD
+          # All parameters are already set as environment variables in stepTemplate.env
+          # The CLI function will read them directly from the environment
+          echo "Executing: mas gitops-iac-generate-common-files"
+          mas gitops-iac-generate-common-files
           exit $?
       command:
         - /bin/sh
