[patch] fix the runafter statement

--- a/tekton/src/pipelines/taskdefs/fvt-core/phase4-disruptive.yml.j2
+++ b/tekton/src/pipelines/taskdefs/fvt-core/phase4-disruptive.yml.j2
@@ -63,7 +63,8 @@
     - name: fvt_test_suite
       value: pathbasedrouting
     {{ lookup('template', 'taskdefs/fvt-core/common/params.yml.j2') | indent(4) }}
-  runAfter: authservice
+  runAfter: 
+    - authservice
 
 # 6. coreidp-ldap
 # -------------------------------------------------------------------------
