--- a/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
@@ -211,7 +211,7 @@ spec:
 
           # Essential parameters passed as command-line arguments
           # Other parameters are read from environment variables set in stepTemplate.env
-          CMD="mas gitops-iac-generate-common-files"
+          CMD="mas gitops-iac-generate-common-files -a $ACCOUNT -c $CLUSTER_NAME -m $MAS_INSTANCE_ID --dir /workspace/gitops-iac --github-push --github-host $GITHUB_HOST --github-org $GITHUB_ORG --github-repo $GITHUB_REPO --git-branch $GIT_BRANCH --region-name $REGION_NAME"
           
           echo "Executing: $CMD"
           eval $CMD
